added link to twitter

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </ol>
 
                     <p>
-                        That should take care of all of the errors you are seeing. If not, please tweet at me @spencemcc and I will help you troubleshoot it.
+                        That should take care of all of the errors you are seeing. If not, please tweet at me <a href="https://twitter.com/spencemcc">@spencemcc</a> and I will help you troubleshoot it.
                     </p>
 
 
