redirect people to personal site article

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="coffeestain" />
     <meta property="og:description" content="Get matched on a coffee conversation date." />
     <meta property="og:type" content="company" />
-    
+    <meta http-equiv="refresh" content="2; URL='http://spence.xyz/twitter-api-fixes-complete-web-developer-udemy-course/'" />
     <!-- CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="assets/css/site.css" rel="stylesheet"/>
@@ -20,48 +20,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     
 </head>
-    <body class="site">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <h1 class="site-align-c site-headline"><strong>Twitter API Fixes, Complete Web Developer Udemy Course</strong><br><br></h1>
-                    <p>
-                        If you need somewhere to start in web development, look no further than <a>https://www.udemy.com/complete-web-developer-course/</a>. I've been cruising through this course whenever I have some free time, and recently I ran into some issues with it given how some of the information is now out of date (as is the nature of the Internet). <br>
-                    </p>
-                    <p>
-                        If you're experiencing problems in Section 9 - APIs with the Twitter API, that is because it has been upgraded since this video was created.
-                    </p>
-
-                    <p>
-                        Here is the code that I finally got to work after some visits to Stack Overflow:
-                    </p>
-
-                    <img src="assets/images/codeBlock.png" style="width: 100%; margin: 0 auto;"></li>
-
-                    <p>
-                        Notice that the syntax for the GET request is different in the updated API. Arguments are passed in as an array, not as URL encoded values. The TwitterOAuth library also has a few hundred more commits than it did when this video was created, so the location and name of some of the files has changed.
-                    </p>
-
-                    <p>
-                        Make sure that you have updated your hosting to PHP 5.5 as well, as the new library does not support lower versions of PHP and will throw out an error dealing with the '['  in line #334 if you try to use an older one.
-                    </p>
-
-                    <p>How to update PHP to PHP 5.5:</p>
-
-                    <ol>
-                        <li>Go to your CPANEL: http://cpanel.ecowebhosting.co.uk/.</li>
-                        <li>Select: "Switch PHP Version”<br>
-                        <img src="assets/images/cpanel.png" style="width: 100%; margin: 0 auto;"></li>
-                        <li>Click the drop down and select PHP 5.5</li>
-                    </ol>
-
-                    <p>
-                        That should take care of all of the errors you are seeing. If not, please tweet at me <a href="https://twitter.com/spencemcc">@spencemcc</a> and I will help you troubleshoot it.
-                    </p>
-
-
-                </div>
-            </div>
+    <body>
+        <div class="col-xs-8 col-xs-offset-2">
+            <h1><a href="http://spence.xyz/twitter-api-fixes-complete-web-developer-udemy-course/">This article has been moved to here</a></h1>
         </div>
     </body>
 </html>
